--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "13.5.6",
-    "next-auth": "4.22.1",
     "@supabase/supabase-js": "2.48.1",
-    "axios": "1.6.7",
+    "axios": "^1.7.9",
+    "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.1"
