--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "2.48.1",
     "axios": "^1.7.9",
-    "next": "^15.1.6",
+    "next": "13.5.6",
     "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
