--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "2.48.1",
-    "axios": "^1.7.9",
+    "axios": "1.6.7",
     "next": "13.5.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "4.24.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.1"
