--- a/railway.toml
+++ b/railway.toml
@@ -5,9 +5,10 @@ dockerfilePath = "Dockerfile"
 [deploy]
 startCommand = "npm run start"
 healthcheckPath = "/api/health"
-healthcheckTimeout = 180
+healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+healthcheckInterval = 45
 
 [variables]
 NODE_ENV = "production" 
