--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}"
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "2.48.1",
     "axios": "1.6.7",
+    "express": "4.18.2",
     "next": "13.5.6",
     "next-auth": "4.24.1",
     "react": "18.2.0",
