--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "nextjs-hello-world",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "cross-env NODE_ENV=development node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +15,13 @@
     "@supabase/supabase-js": "2.48.1",
     "axios": "1.6.7",
     "express": "4.18.2",
-    "next": "13.5.6",
-    "next-auth": "4.24.1",
+    "next": "13.4.19",
+    "next-auth": "4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.1"
+  },
+  "devDependencies": {
+    "cross-env": "7.0.3"
   }
 }
