--- a/railway.toml
+++ b/railway.toml
@@ -5,10 +5,11 @@ dockerfilePath = "Dockerfile"
 [deploy]
 startCommand = "npm run start"
 healthcheckPath = "/health"
-healthcheckTimeout = 30
+healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 5
-healthcheckInterval = 10
+healthcheckInterval = 15
+healthcheckStartPeriod = 30
 
 [variables]
 NODE_ENV = "production"
