--- a/railway.toml
+++ b/railway.toml
@@ -5,12 +5,13 @@ dockerfilePath = "Dockerfile"
 [deploy]
 startCommand = "npm run start"
 healthcheckPath = "/health"
-healthcheckTimeout = 60
+healthcheckTimeout = 90
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 5
 healthcheckInterval = 15
-healthcheckStartPeriod = 30
+healthcheckStartPeriod = 45
 
 [variables]
 NODE_ENV = "production"
+PORT = "8080"
 RAILWAY_STATIC_URL = "https://${RAILWAY_STATIC_URL}" 
